@@ -29,14 +29,6 @@ static HANDLE open_file_impl(const std::string & filename, int mode)
     DWORD dwCreationDisposition = 0;
     DWORD dwFlagsAndAttributes = 0;
 
-#ifndef STXXL_DIRECT_IO_OFF
-    if (mode & file::DIRECT)
-    {
-        dwFlagsAndAttributes |= FILE_FLAG_NO_BUFFERING;
-        // TODO: try also FILE_FLAG_WRITE_THROUGH option ?
-    }
-#endif
-
     if (mode & file::RDONLY)
     {
         dwFlagsAndAttributes |= FILE_ATTRIBUTE_READONLY;
@@ -65,6 +57,19 @@ static HANDLE open_file_impl(const std::string & filename, int mode)
     else
     {
         dwCreationDisposition |= OPEN_ALWAYS;
+    }
+
+#ifndef STXXL_DIRECT_IO_OFF
+    if (mode & file::DIRECT)
+    {
+        dwFlagsAndAttributes |= FILE_FLAG_NO_BUFFERING;
+        // TODO: try also FILE_FLAG_WRITE_THROUGH option ?
+    }
+#endif
+
+    if (mode & file::SYNC)
+    {
+        // ignored
     }
 
     HANDLE file_des = ::CreateFile(filename.c_str(), dwDesiredAccess, dwShareMode, NULL,
