@@ -1,5 +1,10 @@
 Version 1.3.1 (unreleased)
 
+* Possibly breaking changes
+  - No longer open syscall files with O_SYNC|O_DSYNC|O_RSYNC by default when
+    doing direct I/O for a significant write performance increase.
+    A stxxl::file::SYNC flag has been added to allow forcing the O_*SYNC flags
+    when opening files.
 * Internal changes, not user visible
   - change handling of (empty) filler elements in typed_block to fix
     mismatching struct size in nested blocks
